maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:37: error: not found: value sommeAngle
    sommeAngle=sommeAngle+1
    ^Escaper:40: error: not found: value sommeAngle
    sommeAngle=sommeAngle-1
    ^